# socha-legacy-sdk-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
client-base/: Cargo.toml  README.md
client-base/src/: client.rs  error.rs  lib.rs  plugin.rs  protocol.rs  util.rs  xml_node.rs
client-base/src/plugin/: has_player_color.rs  has_team.rs  has_turn.rs  mock.rs  mod.rs
client-base/src/protocol/: close.rs  data.rs  event.rs  game_result.rs  joined.rs  left.rs  mod.rs  packet.rs  player_score.rs  room.rs  score_aggregation.rs  score_cause.rs  score_definition.rs  score_fragment.rs
client-base/tests/: xml_node_test.rs
plugin-2020/: Cargo.toml  README.md
plugin-2020/src/: game.rs  lib.rs  plugin.rs  util.rs
plugin-2020/src/game/: board.rs  field.rs  fields.rs  game_move.rs  game_state.rs  mod.rs  move.rs  piece.rs  piece_type.rs  pieces.rs  player.rs  player_color.rs  positioned_field.rs
plugin-2020/tests/: game_test.rs  util_test.rs
plugin-2021/: Cargo.toml  README.md
plugin-2021/src/: game.rs  plugin.rs
plugin-2021/src/game/: board.rs  color.rs  colors.rs  constants.rs  coordinates.rs  field.rs  fields.rs  game_state.rs  mod.rs  move.rs  piece.rs  piece_shape.rs  piece_shapes.rs  player.rs  rotation.rs  team.rs  vec2.rs
