[package]
name = "socha-plugin-2020"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

[dev-dependencies]
more-asserts = "0.2"

[dependencies]
socha-client-base = { path = "../client-base" }
log = "0.4"
arrayvec = "0.7"
itertools = "0.10"
regex = "1.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
