[package]
name = "socha-plugin-2021"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

[dependencies]
socha-client-base = { path = "../client-base" }
log = "0.4"
arrayvec = "0.7"
itertools = "0.10"
regex = "1.4"
lazy_static = "1.4"
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
# only for testing, the rest is handled by serde
quick-xml = { version = "0.22", features = ["serialize"] }
